[gd_scene load_steps=6 format=3 uid="uid://cu0igjlne08jj"]

[ext_resource type="Texture2D" uid="uid://f2vdq65da8qp" path="res://recovery center/control pannel.png" id="1_fwmsb"]
[ext_resource type="Script" uid="uid://dqsphug47fj1k" path="res://recovery center/control_pannel.gd" id="2_5usmq"]
[ext_resource type="Texture2D" uid="uid://cmr61kx315gco" path="res://recovery center/light sheet.png" id="2_ysj1y"]
[ext_resource type="Texture2D" uid="uid://df45r1h60k5p8" path="res://recovery center/lever sheet.png" id="3_5usmq"]
[ext_resource type="Script" uid="uid://dmsp48p3obyt6" path="res://basic_clickable.gd" id="5_5usmq"]

[node name="ControlPannel" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_fwmsb")
script = ExtResource("2_5usmq")

[node name="light_jeff" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-181.47, -208.386)
scale = Vector2(1.325, 1.325)
texture = ExtResource("2_ysj1y")
hframes = 2

[node name="light_june" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(15.1201, -215.181)
scale = Vector2(1.325, 1.325)
texture = ExtResource("2_ysj1y")
hframes = 2

[node name="light_jerboa" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(177.14, -231.036)
scale = Vector2(1.325, 1.325)
texture = ExtResource("2_ysj1y")
hframes = 2

[node name="lever_jeff" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-123.14, 58.8918)
scale = Vector2(1.475, 1.475)
texture = ExtResource("3_5usmq")
hframes = 2
frame = 1

[node name="c" type="Control" parent="lever_jeff"]
layout_mode = 3
anchors_preset = 0
offset_left = -53.0
offset_top = -64.0
offset_right = 51.0
offset_bottom = 80.0
script = ExtResource("5_5usmq")

[node name="lever_june" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(49.6802, 54.3621)
scale = Vector2(1.475, 1.475)
texture = ExtResource("3_5usmq")
hframes = 2
frame = 1

[node name="c" type="Control" parent="lever_june"]
layout_mode = 3
anchors_preset = 0
offset_left = -55.3764
offset_top = -64.6523
offset_right = 48.6236
offset_bottom = 79.3477
script = ExtResource("5_5usmq")

[node name="lever_jerboa" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(226.83, 40.7712)
scale = Vector2(1.475, 1.475)
texture = ExtResource("3_5usmq")
hframes = 2
frame = 1

[node name="c" type="Control" parent="lever_jerboa"]
layout_mode = 3
anchors_preset = 0
offset_left = -55.478
offset_top = -64.9296
offset_right = 48.522
offset_bottom = 79.0704
script = ExtResource("5_5usmq")

[connection signal="clicked" from="lever_jeff/c" to="." method="_on_jeff_clicked"]
[connection signal="clicked" from="lever_june/c" to="." method="_on_june_clicked"]
[connection signal="clicked" from="lever_jerboa/c" to="." method="_on_jerboa_clicked"]
